--- a/AboutMeProject/app/src/main/res/layout/activity_main.xml
+++ b/AboutMeProject/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/layout_margin"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/name_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/jessyca"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        style="@style/NameStyle" />
 </LinearLayout>
