--- a/AboutMeProject/app/src/main/res/layout/activity_main.xml
+++ b/AboutMeProject/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/layout_margin"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/name_text"
+        style="@style/NameStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/layout_margin"
         android:text="@string/jessyca"
-        style="@style/NameStyle" />
+        android:textAlignment="center" />
 </LinearLayout>
