--- a/AboutMeProject/app/src/main/res/values/styles.xml
+++ b/AboutMeProject/app/src/main/res/values/styles.xml
@@ -2,11 +2,8 @@
 <resources>
 
     <style name="NameStyle">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/layout_margin</item>
         <item name="android:padding">@dimen/small_padding</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
     </style>
