--- a/AboutMeProject/app/src/main/res/layout/activity_main.xml
+++ b/AboutMeProject/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,4 +13,13 @@
         android:layout_margin="@dimen/layout_margin"
         android:text="@string/jessyca"
         android:textAlignment="center" />
+
+    <ImageView
+        android:id="@+id/star_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:srcCompat="@android:drawable/btn_star_big_on"
+        android:contentDescription="TODO" />
+
 </LinearLayout>
