--- a/AboutMeProject/app/src/main/res/layout/activity_main.xml
+++ b/AboutMeProject/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        android:contentDescription="TODO" />
+        android:layout_marginTop="@dimen/layout_margin"
+        android:contentDescription="@string/yellow_star"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
 </LinearLayout>
