--- a/AboutMeProject/app/src/main/res/layout/activity_main.xml
+++ b/AboutMeProject/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,26 @@
         android:contentDescription="@string/yellow_star"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/small_padding">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_bio"
+                style="@style/style_bio"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/layout_margin"
+                android:text="@string/bio_text"
+                android:textAlignment="textStart"
+                app:lineHeight="34sp" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
