--- a/AboutMeProject/app/src/main/res/values/styles.xml
+++ b/AboutMeProject/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
     </style>
+
+    <style name="style_bio">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
