--- a/WhatDidILearn/app/src/main/res/layout/item_learned.xml
+++ b/WhatDidILearn/app/src/main/res/layout/item_learned.xml
@@ -3,30 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/container_padding">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Kotlin"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="44dp" />
+        android:padding="@dimen/text_padding"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        tools:text="Kotlin - Null safety" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:padding="@dimen/text_padding"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="176dp" />
+        tools:text="O sistema de tipos de Kotlin visa eliminar o perigo de referências nulas do código." />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="50dp"
-        android:layout_height="106dp"
+        android:layout_height="0dp"
         android:background="#FF0000"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView"></LinearLayout>
+        app:layout_constraintTop_toTopOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
