--- a/WhatDidILearn/app/src/main/res/layout/activity_add_new_item.xml
+++ b/WhatDidILearn/app/src/main/res/layout/activity_add_new_item.xml
@@ -1,71 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/container_padding"
+    android:orientation="vertical"
     tools:context=".view.AddNewItemActivity">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Item Title:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textView_itemTitle"
+        style="@style/labelStyle"
+        android:labelFor="@id/editText_title"
+        android:text="@string/item_title" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:boxCornerRadiusBottomEnd="8dp"
-        app:boxCornerRadiusBottomStart="8dp"
-        app:boxCornerRadiusTopEnd="8dp"
-        app:boxCornerRadiusTopStart="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
+    <EditText
+        android:id="@+id/editText_title"
+        style="@style/editTextStyle"
+        android:layout_height="50dp"
+        android:importantForAutofill="no" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView_itemDescription"
+        style="@style/labelStyle"
+        android:labelFor="@id/editText_description"
+        android:text="@string/item_description" />
+
+    <EditText
+        android:id="@+id/editText_description"
+        style="@style/editTextStyle"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:importantForAutofill="no" />
+
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Item Description:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textField" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textField2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:boxCornerRadiusBottomEnd="8dp"
-        app:boxCornerRadiusBottomStart="8dp"
-        app:boxCornerRadiusTopEnd="8dp"
-        app:boxCornerRadiusTopStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="44dp"
-            tools:layout_editor_absoluteY="158dp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_gravity="end"
+        android:backgroundTint="@color/yellow_red"
+        android:text="@string/btn_save" />
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</LinearLayout>
