--- a/WhatDidILearn/app/src/main/res/layout/activity_add_new_item.xml
+++ b/WhatDidILearn/app/src/main/res/layout/activity_add_new_item.xml
@@ -34,7 +34,7 @@
         android:importantForAutofill="no" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
